--- a/Final Exercise/index.html
+++ b/Final Exercise/index.html
@@ -21,6 +21,7 @@
         </div>
         <div id = "playtangle2" ></div>
       </div>
+      <script src="javascript.js"></script>
+
 </body>
-<script src="javascript.js" defer></script>
 </html>
