--- a/Final_Exercise/index.html
+++ b/Final_Exercise/index.html
@@ -21,6 +21,6 @@
         </div>
         <div id = "playtangle2" ></div>
       </div>
+      <script src="javascript.js"></script>
 </body>
-<script src="javascript.js" defer></script>
 </html>
